--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 <!-- END JAVASCRIPT/JQUERY LINK -->
 </body>
 <footer>
-	<img src="images/TWFW_Logo-wb.svg" class="walrye">
+	<img src="images/TheWalrye.svg" class="walrye">
 	<h3>CHECK ME OUT!</h3>
 	<ul>
 		<li><a href="https://www.facebook.com/RyanSciandra" target="_blank"><img src="images/Facebook.svg"></a></li>
