--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="#" id="pull">
 	<!-- BEGIN LOGO -->
 		<div class="logo clearfix">
-			<img src="images/TWFW_Logo.svg" class="walrus">
+			<img src="images/TheWalrye.svg" class="walrus">
 			<img src="images/TWFW-Title_SMS-alt.svg" class="title">
 			<!-- <h1>THE WELL FED WALRYE<h1> -->
 			<!-- BEGIN ANIMATED HAMBURGER -->	
@@ -56,22 +56,26 @@
 	</section>
 	<!-- END CAROUSEL IMAGE DISPLAY -->
 	<!-- BEGIN RECIPE LINKS -->
+	<h1>FEED ME!</h1>
 	<ul>
 		<li class="recipe-title">
 			<a href="recipe_01.html">
 				<img src="images/01a-FishTacos.jpg">
 				<section>
-					<h2>VIETNAMESE FISH TACOS</h2>
-					<p>Quick and easy mash up of flavors that taste awesome!</p>
+					<h2>Vietnamese Fish Tacos w/ Quick-Pickled Carrots and Daikon</h2>
+					<p>Sometimes it feels like everyday is Taco Tuesday around these parts. I’m not complaining though – I’ll never say no to a fluffy, soft tortilla filled with deliciousness. Especially when that deliciousness is a decidedly Vietnamese take on fish tacos!</p>
+					<p>View the Recipe ...</p>
 				</section>
+
 			</a>
 		</li>
 		<li class="recipe-title">
 			<a href="#"> 
 				<img src="images/02a-TomatoBasilBurrataPasta.jpg">
 				<section>
-					<h2>BURRATAL &amp; SPAGHETTI</h2>
-					<p>A One Pot Pasta Dish that's Sure to Please!</p>
+					<h2>One Pot Pasta: Tomato, Basil and Burrata Spaghetti</h2>
+					<p>This is a quickie! Quick and easy recipes that I don’t have much to say about, aside from the fact that they taste awesome and you should give them a go! It’s the simple dishes, especially in hot weather.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -79,8 +83,9 @@
 			<a href="#">
 				<img src="images/03a-CroqueMonsieurPuff.jpg">
 				<section>
-					<h2>MINI CROQUE MONSIEURS</h2>
-					<p>Crisp and gooey, decadent and rich, and absolutely addictive!</p>
+					<h2>Mini Ham and Cheese Croque Monsieur Puff Pastry Tarts</h2>
+					<p>Croques are classic French bistro fare and since I figured and everyone should have tried them at least once in their life.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -88,8 +93,9 @@
 			<a href="#">
 				<img src="images/04-PerfectMicrowaveNachos.jpg">
 				<section>
-					<h2>MICROWAVE NACHOS</h2>
-					<p> Hot and crispy corn tortilla chips, melty cheese, and all the toppings!</p>
+					<h2>Perfect Microwave Nachos</h2>
+					<p>I have an obsession with nachos. When they’re done right, I think they’re the perfect food: hot and crispy corn tortilla chips, melty cheese, and all the toppings. I like my nachos fully loaded, how about you?</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -97,8 +103,9 @@
 			<a href="#">
 				<img src="images/05a-MiniBlueberryGalettes.jpg">
 				<section>
-					<h2>MINI BLUEBERRY YUMS</h2>
-					<p>Warm jammy centers with crisp nutty crust, topped w/ vanilla ice cream!</p>
+					<h2>Mini Blueberry Galettes</h2>
+					<p>I don’t have a super-cute story about me picking blueberries in the summertime on the side of the road. I wish I did, but blueberries are awesome and you'll love them in this tastey desert!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -106,8 +113,9 @@
 			<a href="#">
 				<img src="images/06a-BrownieFudgsiclePops.jpg">
 				<section>
-					<h2>BROWNIE FUDGESICLE</h2>
-					<p>Chewy chunks of fudge brownies in creamy, chocolate-y goodness!</p>
+					<h2>Homemade Fudgesicle Brownie Pops</h2>
+					<p>All it takes is a couple of bars from that familiar tune of the ice cream man: instantly I’m five again, equal parts nervous and excited!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -115,8 +123,9 @@
 			<a href="#">
 				<img src="images/07a-CrispyOvenBakedThaiChickenWings.jpg">
 				<section>
-					<h2>THAI CHICKEN WANGS</h2>
-					<p>Crispy wings tossed in a sweet and spicy, sour and savory lime-fish sauce!</p>
+					<h2>Spicy Thai Oven-Fried Chicken Wings</h2>
+					<p>I love a good chicken wing: pan-fried, deep-fried, baked, braised, boiled…well, you get the idea. Chicken wings are one of those universal foods: if you’re a fan of chicken, you’re pretty much a fan of chicken wings.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -124,8 +133,9 @@
 			<a href="#">
 				<img src="images/08a-TurkeyBanhMiBurger.jpg">
 				<section>
-					<h2>TURKEY BANH MI BURGER</h2>
-					<p>The best of many worlds: Healthy burgers with daikon and carrot pickles!</p>
+					<h2>Turkey Banh Mi Burger</h2>
+					<p>Sometimes people are weird about fusion food. I think it stems from a time when fusion meant foods that went together that just didn’t make sense. Now, I feel like all the best food is fusion, even if it isn’t.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -133,8 +143,9 @@
 			<a href="#">
 				<img src="images/09a-ShrimpZucchiniNoodles.jpg">
 				<section>
-					<h2>SHRIMP &amp; ZUCCHINI PASTA</h2>
-					<p>A perfect indulgent, yet light summer evening meal!</p>
+					<h2>Spicy Shrimp and Zucchini Noodles</h2>
+					<p>I've been on a huge vegetable kick lately. I must be growing up or something because all of a sudden, I can’t get enough vegetables. When I was a kid I don’t remember eating vegetables at all ...</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -142,8 +153,9 @@
 			<a href="#">
 				<img src="images/10a-PotatoBuns.jpg">
 				<section>
-					<h2>POTATO SLIDER BUNS</h2>
-					<p>The Gentle fluffiness that isn’t in regular bread!</p>
+					<h2>Potato Slider Buns</h2>
+					<p>These potato buns were a dream to make. I love working with yeast, but for some reason I always shy away. Then when I do, I remember why I love it so much. The soft give of dough as you’re shaping it is a feeling like no other. There’s something incredibly satisfying about combining flour, salt, yeast, butter, and sugar (and potatoes!) and ending up with soft, fluffy buns.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -151,8 +163,9 @@
 			<a href="#">
 				<img src="images/11a-JalapenoPopperDeviledEggs.jpg">
 				<section>
-					<h2>JALAPE&Ntilde;O DEVILED EGGS</h2>
-					<p>Cool, creamy, with just a touch of heat ... Oh so delicious!</p>
+					<h2>Jalape&ntilde;o Popper Deviled Eggs</h2>
+					<p>If I see deviled eggs at a party, you betcha I’m going to be there, eating them all up before anyone else has a chance. Okay, kidding, I’d never eat ALL of them. I’d just have an egg or two(ish).</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -160,8 +173,9 @@
 			<a href="#">
 				<img src="images/12a-ChocolateChipCookie.jpg">
 				<section>
-					<h2>CHOLOCOLATE CHIP COOKIE</h2>
-					<p>Sweet and salty, golden brown and crispy, yet perfectly gooey and soft!</p>
+					<h2>Ooo So Good Chocolate Chip Cookies</h2>
+					<p>Golden brown and crispy on the edges and perfectly gooey and soft in the middles. The sprinkle of sea salt takes the entire cookie over the edge.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -169,17 +183,19 @@
 			<a href="#">
 				<img src="images/13a-MatchaCoconutMacaroons.jpg">
 				<section>
-					<h2>MACAROONS</h2>
-					<p>The nuttiness of the coconut and the slightly sweet green flavour of matcha!</p>
+					<h2>Coconut Macaroons with a Twist</h2>
+					<p>A good coconut macaroon is a delicious thing: mounded, crisp and crunchy outsides and soft chewy insides. I’m a huge fan of macaroons, especially when they’re homemade. These have a slight twist by adding the slightly sweet green flavour of matcha. Of course, if you don’t have any matcha on hand you can feel free to make these without.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
 		<li class="recipe-title">
 			<a href="#">
-				<img src="images/14a-ChineseSausageCarbonara.jpg">
+				<img src="images/14-ChineseSausageCarbonara.jpg">
 				<section>
-					<h2>CHINESE CARBONARA</h2>
-					<p>Salty crisp meat, creamy eggy sauce, and noodles!</p>
+					<h2>Chinese Sausage Carbonara Recipe</h2>
+					<p>Here, the Chinese sausage basically stands in for the bacon. They have quite a few similarities: salty, porky, fatty. Salty crisp meat, creamy eggy sauce, and noodles –this is fall time comfort food at it’s best!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -187,8 +203,9 @@
 			<a href="#">
 				<img src="images/15-PulledPorkFriedRice.jpg">
 				<section>
-					<h2>PULLED PORK FRIED RICE</h2>
-					<p>Clean out your fridge and make something delicious!</p>
+					<h2>Pulled Pork Fried Rice Recipe</h2>
+					<p>When I have a bunch of leftover meat I tend to make fried rice. I’ve made it with leftover fried chicken, porchetta and yes, even pulled pork. Pulled pork fried rice is definitely a bestovers kind of thing. You can clean out your fridge and make something delicious!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -196,17 +213,19 @@
 			<a href="#">
 				<img src="images/16a-LemongrassPorkMeatball.jpg">
 				<section>
-					<h2>LEMONGRASS PORK MEATBALL</h2>
-					<p>Juicy and flavorful, just shape and bake!</p>
+					<h2>Lemongrass Pork Meatball Quinoa Bowl Recipe</h2>
+					<p>Just mix all of the ingredients together gently, shape and bake! Popping them in the oven gives you some time to prepare all the vegetables and quinoa. They’re juicy and flavourful on their own, but throw them in a bún bowl and you’re gold!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
 		<li class="recipe-title">
 			<a href="#">
-				<img src="images/17a-GoatCheeseToastsBalsamicRoastedTomatoes.jpg">
+				<img src="images/17-GoatCheeseToastsBalsamicRoastedTomatoes.jpg">
 				<section>
-					<h2>GOAT CHEESE TOASTS</h2>
-					<p>Dressed up toast is always a classic play!</p>
+					<h2>Goat Cheese Toasts with Balsamic and Roasted Tomatoes</h2>
+					<p>Even unadorned, Toast is delicious: the edges get crunchy and slightly caramelized, the golden brown outsides give way to soft and piping hot insides. When Toast is good, oh, it’s good. And as much as I like plain, I do play dress up every now and then. A bit of rich goat cheese, some roasted tomatoes, a drizzle of reduced balsamic and fresh basil is always a classic play.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -214,17 +233,19 @@
 			<a href="#">
 				<img src="images/18a-BroccoliTots.jpg">
 				<section>
-					<h2>CHEDDAR BROCCOLI TOTS</h2>
-					<p>They may not look like much, but they’re completely addictive!</p>
+					<h2>Cheddar Cheese Broccoli Tots</h2>
+					<p>They may not look like much, but they’re completely addictive! My broccoli and cheddar obsession lives on with these tots made for dipping. I spiced them up a bit with little shichimi togarashi dipped them in sriracha ketchup. Seriously good!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
 		<li class="recipe-title">
 			<a href="#">
-				<img src="images/19a-MiniBeefBeerPie.jpg">
+				<img src="images/19-MiniBeefBeerPie.jpg">
 				<section>
-					<h2>BEEF &amp; BEER HAND PIES</h2>
-					<p>Saucy mini beef pies flavoured with beer all wrapped up in a flaky cheddar crust.</p>
+					<h2>Mini Beef &amp; Beer Hand Pies with a Cheddar Cheese Crust</h2>
+					<p>These little beef pies will definitely warm you up from the inside out. Savoury, saucy minced beef insides studded with carrots, potatoes and peas and flavoured with beer and tomato all wrapped up in a flaky cheddar crust. They’re good either at room temperature or hot.</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -232,8 +253,9 @@
 			<a href="#">
 				<img src="images/20a-CardamomWaffles.jpg">
 				<section>
-					<h2>GINGERBREAD WALFFLES</h2>
-					<p>They’re soft, yet crisp and full of gingerbread flavour!</p>
+					<h2>Gingerbread Cardamom Waffles</h2>
+					<p>They’re soft, yet crisp and full of gingerbread flavour due to the classic molasses, cinnamon, ginger, nutmeg, cloves, and the not so traditional touch of cardamom for a bit more flair. I’m a huge gingerbread fan and if you whip up these waffles your house will be smelling all cozy in no time, no chilling, rolling or baking needed!</p>
+					<p>View the Recipe ...</p>
 				</section>
 			</a>
 		</li>
@@ -246,7 +268,7 @@
 <!-- END JAVASCRIPT/JQUERY LINK -->
 </body>
 <footer>
-	<img src="images/TWFW_Logo-wb.svg" class="walrye">
+	<img src="images/TheWalrye.svg" class="walrye">
 	<h3>CHECK ME OUT!</h3>
 	<ul>
 		<li><a href="https://www.facebook.com/RyanSciandra" target="_blank"><img src="images/Facebook.svg"></a></li>
