--- a/recipe_01.html
+++ b/recipe_01.html
@@ -47,7 +47,7 @@
 <!-- END MAIN NAVIGATION -->
 <article class="recipe">
 	<!-- BEGIN RECIPE -->
-		<img src="images/01-FishTacos.jpg">
+		<img src="images/01a-FishTacos.jpg">
 		<h1>Vietnamese Fish Tacos</h1>
 		<ul>
 			<li>Serves 2-4 </li>
@@ -58,35 +58,35 @@
 		<h2>Ingredients</h2>
 		<ul>
 			<li><span>Fish:</span></li>
-			<li>1 LB FIRM WHITE FISH, SUCH AS COD</li>
-			<li>2 TEASPOONS FISH SAUCE</li>
-			<li>2 TEASPOONS SUGAR</li>
-			<li>1 TEASPOON FRESHLY GROUND PEPPER</li>
-			<li>1/4 TEASPOON GROUND TUMERIC</li>
-			<li>2 CLOVES GARLIC, MINCED</li>
-			<li>1 TEASPOON OIL</li>
-			<li>1 TABLESPOON CHOPPED FRESH CILANTRO</li>
-			<li>1 TABLESPOON CHOPPED FRESH MINT</li>
-			<li>1 TABLESPOON SLICED GREEN ONIONS</li>
-			<li>1 TABLESPOON ROUGHLY CHOPPED FRESH DILL</li>
-			<li>1/2 CUP DICED TOMATOES</li>
-			<li>JUICE OF 1/2 LIME</li>
-			<li>SALT AND PEPPER, TO TASTE</li>
+			<li>1 lb. Firm White Fish Such as Cod</li>
+			<li>2 tsp. Fish Sauce</li>
+			<li>2 tsp. Sugar</li>
+			<li>1 tsp. Freshly Ground Pepper</li>
+			<li>1/4 tsp. Ground Tumeric</li>
+			<li>2 Cloves Garlic, Minced</li>
+			<li>1 tsp. Olive Oil</li>
+			<li>1 tbsp. Chopped Fresh Cilantro</li>
+			<li>1 tbsp. Chopped Fresh Mint</li>
+			<li>1 tbsp. Sliced Green Onions</li>
+			<li>1 tbsp. Roughly Chopped Fresh Dill</li>
+			<li>1/2 Cup Diced Tomatoes</li>
+			<li>Juice of 1/2 Lime</li>
+			<li>Salt &amp; Pepper, to Taste</li>
 		</ul>
 		<ul>
 			<li><span>Quick Pickled Carrots &amp; Daikon:</span></li>
-			<li>1 LARGE CARROT, JULIENNED</li>
-			<li>2” PIECE OF DAIKON, JULIENNED</li>
-			<li>1⁄2 TEASPOON SALT</li>
-			<li>2 TEASPOON SUGAR</li>
+			<li>1 Lg. Carrot, Julienned</li>
+			<li>2” Piece of Daikon, Julienned</li>
+			<li>1⁄2 tsp. Salt</li>
+			<li>2 tsp. Sugar</li>
 		</ul>
 		<ul>
 			<li><span>To Serve:</span></li>
-			<li>WARMED TORTILLAS</li>
-			<li>EXTRA HERBS, ROUGHLY CHOPPED</li>
-			<li>THE QUICK PICKLED DAIKON AND CARROT</li>
-			<li>LIME WEDGES</li>
-			<li>DICED RED ONION, IF DESIRED</li>
+			<li>Warmed Tortillas</li>
+			<li>Extra Herbs, Roughly Chopped</li>
+			<li>The Quick Pickled Daikon &amp; Carrot</li>
+			<li>Lime Wedges</li>
+			<li>Diced Red Onion, if Desired</li>
 		</ul>
 		<section>
 			<h2>Preperation</h2>
@@ -104,7 +104,7 @@
 <!-- END JAVASCRIPT/JQUERY LINK -->
 </body>
 <footer>
-	<img src="images/TWFW_Logo-wb.svg" class="walrye">
+	<img src="images/TheWalrye.svg" class="walrye">
 	<h3>CHECK ME OUT!</h3>
 	<ul>
 		<li><a href="https://www.facebook.com/RyanSciandra" target="_blank"><img src="images/Facebook.svg"></a></li>
