Further Layout Updates

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>The Well Fed Walry</title>
+	<title>The Well Fed Walrye</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- BEGIN CSS & FONT LINKS -->
@@ -29,7 +29,6 @@
     <a href="#" id="pull">
 	<!-- BEGIN LOGO -->
 		<div class="logo clearfix">
-			<img src="images/TWFW_Logo.svg" class="walrus">
 			<img src="images/TWFW-Title_SMS-alt.svg" class="title">
 			<!-- <h1>THE WELL FED WALRYE<h1> -->
 			<!-- BEGIN ANIMATED HAMBURGER -->	
