--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>The Well Fed Walry</title>
+	<title>The Well Fed Walrye</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- BEGIN CSS & FONT LINKS -->
@@ -29,7 +29,6 @@
     <a href="#" id="pull">
 	<!-- BEGIN LOGO -->
 		<div class="logo clearfix">
-			<img src="images/TWFW_Logo.svg" class="walrus">
 			<img src="images/TWFW-Title_SMS-alt.svg" class="title">
 			<!-- <h1>THE WELL FED WALRYE<h1> -->
 			<!-- BEGIN ANIMATED HAMBURGER -->	
@@ -47,7 +46,6 @@
 <!-- END MAIN NAVIGATION -->
 <article class="contact">
     <!-- BEGIN CONTACT ME SECTION -->
-    <img src="images/paper_airplane.jpg">
     <h1>SAY HELLO!</h1>
     <section>
         <form action="" method="post">
@@ -65,7 +63,7 @@
 <!-- END JAVASCRIPT/JQUERY LINK -->
 </body>
 <footer>
-	<img src="images/TWFW_Logo-wb.svg" class="walrye">
+	<img src="images/TheWalrye.svg" class="walrye">
 	<h3>CHECK ME OUT!</h3>
 	<ul>
 		<li><a href="https://www.facebook.com/RyanSciandra" target="_blank"><img src="images/Facebook.svg"></a></li>
