Further Design Tweaks

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <article class="profile">
 	<!-- BEGIN ABOUT ME -->
 		<img src="images/Walrus.jpg">
-		<h1>HEY O!</h1>
+		<h1>I am the Walrus ...</h1>
 		<section>
 			<p>Name's Ryan, the gent behind The Well Fed Walrye.</p>
 			<p>It doesn't matter if it is dishes inspired by favourite restaurants, takeout, whatever is in the fridge, I love all food!</p>
