--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 <!-- END MAIN NAVIGATION -->
 <article class="contact">
     <!-- BEGIN CONTACT ME SECTION -->
-    <h1>SAY HELLO!</h1>
+    <h1>Drop Me a Line!</h1>
     <section>
         <form action="" method="post">
         	<input type="text" name="name" placeholder="Enter your name, ..." width="100px;">
