--- a/recipe_01.html
+++ b/recipe_01.html
@@ -67,7 +67,7 @@
 			<li>1 tbsp. Chopped Fresh Cilantro</li>
 			<li>1 tbsp. Chopped Fresh Mint</li>
 			<li>1 tbsp. Sliced Green Onions</li>
-			<li>1 tbsp. Roughly Chopped Fresh Dill</li>
+			<li>1 tbsp. Chopped Fresh Dill</li>
 			<li>1/2 Cup Diced Tomatoes</li>
 			<li>Juice of 1/2 Lime</li>
 			<li>Salt &amp; Pepper, to Taste</li>
