Contact Form Styling

--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
     <h1>Drop Me a Line!</h1>
     <section>
         <form action="" method="post">
-        	<input type="text" name="name" placeholder="Enter your name, ..." width="100px;">
-            <input type="text" name="address" placeholder="Enter your email address, ..." width="100px;">
-            <textarea name="message" rows="10" cols="15" placeholder="... a message, and ..."></textarea>
+        	<input type="text" name="name" placeholder="Enter your name, ...">
+            <input type="text" name="address" placeholder="... email address, ...">
+            <textarea name="message" rows="10" cols="15" placeholder="... and a message!"></textarea>
             <button>Send</button>		
         </form>
     </section>
