--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
     <h1>Drop Me a Line!</h1>
     <section>
         <form action="" method="post">
-        	<input type="text" name="name" placeholder="Enter Your Name">
-            <input type="text" name="address" placeholder="Enter Your Email Address">
-            <textarea name="message" rows="10" cols="15" placeholder="Enter a Message"></textarea>
+        	<input type="text" name="name" placeholder="Name">
+            <input type="text" name="address" placeholder="Email Address">
+            <textarea name="message" rows="10" cols="15" placeholder="Message"></textarea>
             <button>Send</button>		
         </form>
     </section>
